applications/v5/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/NotFoundException.java
package com.example.weeklyplanning.web.rest.errors;

public class NotFoundException extends RuntimeException {

    public NotFoundException(String message) {
        super(message);
    }
}
